apps/public/fui-components/fui-components-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fui-components
  labels:
    app: fui-components
  name: fui-components
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fui-components
  template:
    metadata:
      labels:
        app: fui-components
    spec:
      imagePullSecrets:
        - name: regcred
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: NotIn
                    values:
                      - arm64
      containers:
        - image: harbor.local.abbottland.io/library/fui-components:0.3.0 # {"$imagepolicy": "flux-system:fui-components"}
          name: fui-components
          ports:
            - containerPort: 80
              hostPort: 80
              name: http
          resources: {}
