apps/public/fui-components/fui-components-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fui-components
  namespace: fui-components
  labels:
    app: fui-components
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: fui-components
